--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,16 @@
   </head>
 
   <body>
-    <h1>Hi!</h1>
+    <h1>Group chat!</h1>
+
+    <ol id="messages"></ol>
+
+    <form id="message-form">
+      <input name="message" type="text" placeholder="Type your message!"/>
+      <button>Send</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery.min.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
