--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
       <input name="message" type="text" placeholder="Type your message!"/>
       <button>Send</button>
     </form>
+
+    <button id="send-location">Send location</button>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery.min.js"></script>
     <script src="/js/index.js"></script>
